--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".SplashActivity" android:theme="@style/SplashTheme">
+        <activity android:name=".activity.SplashActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,12 +24,14 @@
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:screenOrientation="portrait"
+            android:name=".activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:name=".activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
