--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
 
 
 dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile 'com.daimajia.numberprogressbar:library:1.4@aar'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -38,6 +38,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.+'
     compile 'com.android.support:design:23.4.+'
+    compile 'com.android.support:support-v4:23.4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile files('libs/commons-lang-2.6.jar')
+
 }
