--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven {
             url 'https://maven.google.com/'
             name 'Google'
