--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile files('libs/commons-lang-2.6.jar')
+    compile 'com.github.bumptech.glide:glide:3.+'
 
 }
