--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile files('libs/commons-lang-2.6.jar')
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
-    compile('org.apache.httpcomponents:httpmime:4.3') {
-        exclude module: "httpclient"
-    }
-    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.9'
+    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile 'com.github.bumptech.glide:glide:3.+'
 }
